source_all/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> modification
Rule 8     statement -> iF
Rule 9     statement -> whilE
Rule 10    statement -> for
Rule 11    statement -> break
Rule 12    statement -> return
Rule 13    statement -> function
Rule 14    statement -> runfunction
Rule 15    break -> BREAK statements
Rule 16    break -> BREAK
Rule 17    return -> RETURN
Rule 18    for -> FOR ( operation ; condition ; operation ) { statements }
Rule 19    condition -> VARIABLE > VARIABLE
Rule 20    condition -> VARIABLE < VARIABLE
Rule 21    condition -> VARIABLE > NUMBER
Rule 22    condition -> VARIABLE < NUMBER
Rule 23    condition -> VARIABLE < = VARIABLE
Rule 24    condition -> VARIABLE > = VARIABLE
Rule 25    condition -> VARIABLE [ factor ] > VARIABLE
Rule 26    condition -> VARIABLE [ factor ] < VARIABLE
Rule 27    condition -> VARIABLE < VARIABLE AND VARIABLE [ factor ] > VARIABLE
Rule 28    condition -> VARIABLE < VARIABLE AND VARIABLE [ factor ] < = VARIABLE
Rule 29    iF -> IF ( condition ) { statements }
Rule 30    iF -> IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
Rule 31    whilE -> WHILE ( condition ) { statements }
Rule 32    assignment -> VARIABLE = NUMBER
Rule 33    assignment -> VARIABLE = [ sentence ]
Rule 34    modification -> VARIABLE [ factor ] = VARIABLE [ factor ]
Rule 35    modification -> VARIABLE [ factor ] = VARIABLE
Rule 36    operation -> VARIABLE = expression
Rule 37    operation -> VARIABLE + +
Rule 38    operation -> VARIABLE - -
Rule 39    expression -> expression + term
Rule 40    expression -> expression - term
Rule 41    expression -> term
Rule 42    expression -> VARIABLE [ factor ]
Rule 43    expression -> LEN ( term )
Rule 44    term -> term * factor
Rule 45    term -> term / factor
Rule 46    term -> term / / factor
Rule 47    term -> factor
Rule 48    factor -> VARIABLE
Rule 49    factor -> ( expression )
Rule 50    factor -> NUMBER
Rule 51    print -> PRINT ( sentence )
Rule 52    sentence -> word , sentence
Rule 53    sentence -> word
Rule 54    word -> NUMBER
Rule 55    word -> VARIABLE
Rule 56    function -> DEF VARIABLE ( sentence ) { statements }
Rule 57    runfunction -> VARIABLE ( sentence )

Terminals, with rules where they appear

(                    : 18 29 30 30 31 43 49 51 56 57
)                    : 18 29 30 30 31 43 49 51 56 57
*                    : 44
+                    : 37 37 39
,                    : 52
-                    : 38 38 40
/                    : 45 46 46
;                    : 18 18
<                    : 20 22 23 26 27 28 28
=                    : 23 24 28 32 33 34 35 36
>                    : 19 21 24 25 27
AND                  : 27 28
BREAK                : 15 16
DEF                  : 56
ELIF                 : 30
ELSE                 : 30
FOR                  : 18
IF                   : 29 30
LEN                  : 43
NUMBER               : 21 22 32 50 54
PRINT                : 51
RETURN               : 17
VARIABLE             : 19 19 20 20 21 22 23 23 24 24 25 25 26 26 27 27 27 27 28 28 28 28 32 33 34 34 35 35 36 37 38 42 48 55 56 57
WHILE                : 31
[                    : 25 26 27 28 33 34 34 35 42
]                    : 25 26 27 28 33 34 34 35 42
error                : 
{                    : 18 29 30 30 30 31 56
}                    : 18 29 30 30 30 31 56

Nonterminals, with rules where they appear

assignment           : 4
break                : 11
condition            : 18 29 30 30 31
expression           : 36 39 40 49
factor               : 25 26 27 28 34 34 35 42 44 45 46 47
for                  : 10
function             : 13
iF                   : 8
modification         : 7
operation            : 5 18 18
print                : 6
program              : 0
return               : 12
runfunction          : 14
sentence             : 33 51 52 56 57
statement            : 2 3
statements           : 1 2 15 18 29 30 30 30 31 56
term                 : 39 40 41 43 44 45 46
whilE                : 9
word                 : 52 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (12) statement -> . return
    (13) statement -> . function
    (14) statement -> . runfunction
    (32) assignment -> . VARIABLE = NUMBER
    (33) assignment -> . VARIABLE = [ sentence ]
    (36) operation -> . VARIABLE = expression
    (37) operation -> . VARIABLE + +
    (38) operation -> . VARIABLE - -
    (51) print -> . PRINT ( sentence )
    (34) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (35) modification -> . VARIABLE [ factor ] = VARIABLE
    (29) iF -> . IF ( condition ) { statements }
    (30) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (31) whilE -> . WHILE ( condition ) { statements }
    (18) for -> . FOR ( operation ; condition ; operation ) { statements }
    (15) break -> . BREAK statements
    (16) break -> . BREAK
    (17) return -> . RETURN
    (56) function -> . DEF VARIABLE ( sentence ) { statements }
    (57) runfunction -> . VARIABLE ( sentence )

    VARIABLE        shift and go to state 15
    PRINT           shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    BREAK           shift and go to state 20
    RETURN          shift and go to state 21
    DEF             shift and go to state 22

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11
    return                         shift and go to state 12
    function                       shift and go to state 13
    runfunction                    shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (12) statement -> . return
    (13) statement -> . function
    (14) statement -> . runfunction
    (32) assignment -> . VARIABLE = NUMBER
    (33) assignment -> . VARIABLE = [ sentence ]
    (36) operation -> . VARIABLE = expression
    (37) operation -> . VARIABLE + +
    (38) operation -> . VARIABLE - -
    (51) print -> . PRINT ( sentence )
    (34) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (35) modification -> . VARIABLE [ factor ] = VARIABLE
    (29) iF -> . IF ( condition ) { statements }
    (30) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (31) whilE -> . WHILE ( condition ) { statements }
    (18) for -> . FOR ( operation ; condition ; operation ) { statements }
    (15) break -> . BREAK statements
    (16) break -> . BREAK
    (17) return -> . RETURN
    (56) function -> . DEF VARIABLE ( sentence ) { statements }
    (57) runfunction -> . VARIABLE ( sentence )

    $end            reduce using rule 1 (program -> statements .)
    VARIABLE        shift and go to state 15
    PRINT           shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    BREAK           shift and go to state 20
    RETURN          shift and go to state 21
    DEF             shift and go to state 22

    statement                      shift and go to state 23
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11
    return                         shift and go to state 12
    function                       shift and go to state 13
    runfunction                    shift and go to state 14

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    VARIABLE        reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> operation .

    VARIABLE        reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    IF              reduce using rule 5 (statement -> operation .)
    WHILE           reduce using rule 5 (statement -> operation .)
    FOR             reduce using rule 5 (statement -> operation .)
    BREAK           reduce using rule 5 (statement -> operation .)
    RETURN          reduce using rule 5 (statement -> operation .)
    DEF             reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    }               reduce using rule 5 (statement -> operation .)


state 6

    (6) statement -> print .

    VARIABLE        reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    RETURN          reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    }               reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> modification .

    VARIABLE        reduce using rule 7 (statement -> modification .)
    PRINT           reduce using rule 7 (statement -> modification .)
    IF              reduce using rule 7 (statement -> modification .)
    WHILE           reduce using rule 7 (statement -> modification .)
    FOR             reduce using rule 7 (statement -> modification .)
    BREAK           reduce using rule 7 (statement -> modification .)
    RETURN          reduce using rule 7 (statement -> modification .)
    DEF             reduce using rule 7 (statement -> modification .)
    $end            reduce using rule 7 (statement -> modification .)
    }               reduce using rule 7 (statement -> modification .)


state 8

    (8) statement -> iF .

    VARIABLE        reduce using rule 8 (statement -> iF .)
    PRINT           reduce using rule 8 (statement -> iF .)
    IF              reduce using rule 8 (statement -> iF .)
    WHILE           reduce using rule 8 (statement -> iF .)
    FOR             reduce using rule 8 (statement -> iF .)
    BREAK           reduce using rule 8 (statement -> iF .)
    RETURN          reduce using rule 8 (statement -> iF .)
    DEF             reduce using rule 8 (statement -> iF .)
    $end            reduce using rule 8 (statement -> iF .)
    }               reduce using rule 8 (statement -> iF .)


state 9

    (9) statement -> whilE .

    VARIABLE        reduce using rule 9 (statement -> whilE .)
    PRINT           reduce using rule 9 (statement -> whilE .)
    IF              reduce using rule 9 (statement -> whilE .)
    WHILE           reduce using rule 9 (statement -> whilE .)
    FOR             reduce using rule 9 (statement -> whilE .)
    BREAK           reduce using rule 9 (statement -> whilE .)
    RETURN          reduce using rule 9 (statement -> whilE .)
    DEF             reduce using rule 9 (statement -> whilE .)
    $end            reduce using rule 9 (statement -> whilE .)
    }               reduce using rule 9 (statement -> whilE .)


state 10

    (10) statement -> for .

    VARIABLE        reduce using rule 10 (statement -> for .)
    PRINT           reduce using rule 10 (statement -> for .)
    IF              reduce using rule 10 (statement -> for .)
    WHILE           reduce using rule 10 (statement -> for .)
    FOR             reduce using rule 10 (statement -> for .)
    BREAK           reduce using rule 10 (statement -> for .)
    RETURN          reduce using rule 10 (statement -> for .)
    DEF             reduce using rule 10 (statement -> for .)
    $end            reduce using rule 10 (statement -> for .)
    }               reduce using rule 10 (statement -> for .)


state 11

    (11) statement -> break .

    VARIABLE        reduce using rule 11 (statement -> break .)
    PRINT           reduce using rule 11 (statement -> break .)
    IF              reduce using rule 11 (statement -> break .)
    WHILE           reduce using rule 11 (statement -> break .)
    FOR             reduce using rule 11 (statement -> break .)
    BREAK           reduce using rule 11 (statement -> break .)
    RETURN          reduce using rule 11 (statement -> break .)
    DEF             reduce using rule 11 (statement -> break .)
    $end            reduce using rule 11 (statement -> break .)
    }               reduce using rule 11 (statement -> break .)


state 12

    (12) statement -> return .

    VARIABLE        reduce using rule 12 (statement -> return .)
    PRINT           reduce using rule 12 (statement -> return .)
    IF              reduce using rule 12 (statement -> return .)
    WHILE           reduce using rule 12 (statement -> return .)
    FOR             reduce using rule 12 (statement -> return .)
    BREAK           reduce using rule 12 (statement -> return .)
    RETURN          reduce using rule 12 (statement -> return .)
    DEF             reduce using rule 12 (statement -> return .)
    $end            reduce using rule 12 (statement -> return .)
    }               reduce using rule 12 (statement -> return .)


state 13

    (13) statement -> function .

    VARIABLE        reduce using rule 13 (statement -> function .)
    PRINT           reduce using rule 13 (statement -> function .)
    IF              reduce using rule 13 (statement -> function .)
    WHILE           reduce using rule 13 (statement -> function .)
    FOR             reduce using rule 13 (statement -> function .)
    BREAK           reduce using rule 13 (statement -> function .)
    RETURN          reduce using rule 13 (statement -> function .)
    DEF             reduce using rule 13 (statement -> function .)
    $end            reduce using rule 13 (statement -> function .)
    }               reduce using rule 13 (statement -> function .)


state 14

    (14) statement -> runfunction .

    VARIABLE        reduce using rule 14 (statement -> runfunction .)
    PRINT           reduce using rule 14 (statement -> runfunction .)
    IF              reduce using rule 14 (statement -> runfunction .)
    WHILE           reduce using rule 14 (statement -> runfunction .)
    FOR             reduce using rule 14 (statement -> runfunction .)
    BREAK           reduce using rule 14 (statement -> runfunction .)
    RETURN          reduce using rule 14 (statement -> runfunction .)
    DEF             reduce using rule 14 (statement -> runfunction .)
    $end            reduce using rule 14 (statement -> runfunction .)
    }               reduce using rule 14 (statement -> runfunction .)


state 15

    (32) assignment -> VARIABLE . = NUMBER
    (33) assignment -> VARIABLE . = [ sentence ]
    (36) operation -> VARIABLE . = expression
    (37) operation -> VARIABLE . + +
    (38) operation -> VARIABLE . - -
    (34) modification -> VARIABLE . [ factor ] = VARIABLE [ factor ]
    (35) modification -> VARIABLE . [ factor ] = VARIABLE
    (57) runfunction -> VARIABLE . ( sentence )

    =               shift and go to state 24
    +               shift and go to state 26
    -               shift and go to state 27
    [               shift and go to state 25
    (               shift and go to state 28


state 16

    (51) print -> PRINT . ( sentence )

    (               shift and go to state 29


state 17

    (29) iF -> IF . ( condition ) { statements }
    (30) iF -> IF . ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }

    (               shift and go to state 30


state 18

    (31) whilE -> WHILE . ( condition ) { statements }

    (               shift and go to state 31


state 19

    (18) for -> FOR . ( operation ; condition ; operation ) { statements }

    (               shift and go to state 32


state 20

    (15) break -> BREAK . statements
    (16) break -> BREAK .
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (12) statement -> . return
    (13) statement -> . function
    (14) statement -> . runfunction
    (32) assignment -> . VARIABLE = NUMBER
    (33) assignment -> . VARIABLE = [ sentence ]
    (36) operation -> . VARIABLE = expression
    (37) operation -> . VARIABLE + +
    (38) operation -> . VARIABLE - -
    (51) print -> . PRINT ( sentence )
    (34) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (35) modification -> . VARIABLE [ factor ] = VARIABLE
    (29) iF -> . IF ( condition ) { statements }
    (30) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (31) whilE -> . WHILE ( condition ) { statements }
    (18) for -> . FOR ( operation ; condition ; operation ) { statements }
    (15) break -> . BREAK statements
    (16) break -> . BREAK
    (17) return -> . RETURN
    (56) function -> . DEF VARIABLE ( sentence ) { statements }
    (57) runfunction -> . VARIABLE ( sentence )

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
    $end            reduce using rule 16 (break -> BREAK .)
    }               reduce using rule 16 (break -> BREAK .)
    VARIABLE        shift and go to state 15
    PRINT           shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    BREAK           shift and go to state 20
    RETURN          shift and go to state 21
    DEF             shift and go to state 22

  ! VARIABLE        [ reduce using rule 16 (break -> BREAK .) ]
  ! PRINT           [ reduce using rule 16 (break -> BREAK .) ]
  ! IF              [ reduce using rule 16 (break -> BREAK .) ]
  ! WHILE           [ reduce using rule 16 (break -> BREAK .) ]
  ! FOR             [ reduce using rule 16 (break -> BREAK .) ]
  ! BREAK           [ reduce using rule 16 (break -> BREAK .) ]
  ! RETURN          [ reduce using rule 16 (break -> BREAK .) ]
  ! DEF             [ reduce using rule 16 (break -> BREAK .) ]

    statements                     shift and go to state 33
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11
    return                         shift and go to state 12
    function                       shift and go to state 13
    runfunction                    shift and go to state 14

state 21

    (17) return -> RETURN .

    VARIABLE        reduce using rule 17 (return -> RETURN .)
    PRINT           reduce using rule 17 (return -> RETURN .)
    IF              reduce using rule 17 (return -> RETURN .)
    WHILE           reduce using rule 17 (return -> RETURN .)
    FOR             reduce using rule 17 (return -> RETURN .)
    BREAK           reduce using rule 17 (return -> RETURN .)
    RETURN          reduce using rule 17 (return -> RETURN .)
    DEF             reduce using rule 17 (return -> RETURN .)
    $end            reduce using rule 17 (return -> RETURN .)
    }               reduce using rule 17 (return -> RETURN .)


state 22

    (56) function -> DEF . VARIABLE ( sentence ) { statements }

    VARIABLE        shift and go to state 34


state 23

    (2) statements -> statements statement .

    VARIABLE        reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    BREAK           reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    }               reduce using rule 2 (statements -> statements statement .)


state 24

    (32) assignment -> VARIABLE = . NUMBER
    (33) assignment -> VARIABLE = . [ sentence ]
    (36) operation -> VARIABLE = . expression
    (39) expression -> . expression + term
    (40) expression -> . expression - term
    (41) expression -> . term
    (42) expression -> . VARIABLE [ factor ]
    (43) expression -> . LEN ( term )
    (44) term -> . term * factor
    (45) term -> . term / factor
    (46) term -> . term / / factor
    (47) term -> . factor
    (48) factor -> . VARIABLE
    (49) factor -> . ( expression )
    (50) factor -> . NUMBER

    NUMBER          shift and go to state 36
    [               shift and go to state 37
    VARIABLE        shift and go to state 35
    LEN             shift and go to state 41
    (               shift and go to state 42

    expression                     shift and go to state 38
    term                           shift and go to state 39
    factor                         shift and go to state 40

state 25

    (34) modification -> VARIABLE [ . factor ] = VARIABLE [ factor ]
    (35) modification -> VARIABLE [ . factor ] = VARIABLE
    (48) factor -> . VARIABLE
    (49) factor -> . ( expression )
    (50) factor -> . NUMBER

    VARIABLE        shift and go to state 43
    (               shift and go to state 42
    NUMBER          shift and go to state 45

    factor                         shift and go to state 44

state 26

    (37) operation -> VARIABLE + . +

    +               shift and go to state 46


state 27

    (38) operation -> VARIABLE - . -

    -               shift and go to state 47


state 28

    (57) runfunction -> VARIABLE ( . sentence )
    (52) sentence -> . word , sentence
    (53) sentence -> . word
    (54) word -> . NUMBER
    (55) word -> . VARIABLE

    NUMBER          shift and go to state 51
    VARIABLE        shift and go to state 48

    sentence                       shift and go to state 49
    word                           shift and go to state 50

state 29

    (51) print -> PRINT ( . sentence )
    (52) sentence -> . word , sentence
    (53) sentence -> . word
    (54) word -> . NUMBER
    (55) word -> . VARIABLE

    NUMBER          shift and go to state 51
    VARIABLE        shift and go to state 48

    sentence                       shift and go to state 52
    word                           shift and go to state 50

state 30

    (29) iF -> IF ( . condition ) { statements }
    (30) iF -> IF ( . condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (19) condition -> . VARIABLE > VARIABLE
    (20) condition -> . VARIABLE < VARIABLE
    (21) condition -> . VARIABLE > NUMBER
    (22) condition -> . VARIABLE < NUMBER
    (23) condition -> . VARIABLE < = VARIABLE
    (24) condition -> . VARIABLE > = VARIABLE
    (25) condition -> . VARIABLE [ factor ] > VARIABLE
    (26) condition -> . VARIABLE [ factor ] < VARIABLE
    (27) condition -> . VARIABLE < VARIABLE AND VARIABLE [ factor ] > VARIABLE
    (28) condition -> . VARIABLE < VARIABLE AND VARIABLE [ factor ] < = VARIABLE

    VARIABLE        shift and go to state 54

    condition                      shift and go to state 53

state 31
